[gd_scene load_steps=39 format=2]

[ext_resource path="res://sprites/enemies/smokeWhite1.png" type="Texture" id=1]
[ext_resource path="res://scripts/turret_01.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/towerDefense_tile298.png" type="Texture" id=3]
[ext_resource path="res://samples/projectil_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/enemies/towerDefense_tile250.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemies/towerDefense_tile228.png" type="Texture" id=6]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=7]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=9]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=10]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=11]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=12]
[ext_resource path="res://sprites/enemies/towerDefense_tile020.png" type="Texture" id=13]
[ext_resource path="res://samples/tank_explosion.wav" type="AudioStream" id=14]
[ext_resource path="res://scenes/hp_bar.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/cannon.gd" type="Script" id=16]
[ext_resource path="res://sprites/enemies/towerDefense_tile249.png" type="Texture" id=17]
[ext_resource path="res://scripts/HOME.gd" type="Script" id=18]
[ext_resource path="res://samples/barrel_explosion.wav" type="AudioStream" id=19]

[sub_resource type="CircleShape2D" id=5]
radius = 24.0

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.010989, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0.0350877, 0.282035 ), 0.0, 1.64091, 0, 0, Vector2( 1, 1 ), 0.20974, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.000259399, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/fire:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire/fire1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HMG/fire/fire2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HMG/fire:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HMG/fire:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( -0.000259399, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/fire:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -53 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.397705, -3.63861 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.398, 35 ), Vector2( -0.397705, -3.63861 ) ]
}

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0.21978, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.201754, 0.754545 ), 1.08347, 1.08347, 0, 0, Vector2( 0.982456, 1 ), -0.0441005, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=26]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 25 )
color_ramp = SubResource( 23 )

[sub_resource type="CircleShape2D" id=27]
radius = 100.0

[sub_resource type="CircleShape2D" id=15]
radius = 27.0

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.70044, 1.94507 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../shooted:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../shooted:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="turret_01" type="StaticBody2D" groups=["radar_entity"]]
position = Vector2( 232, 260 )
rotation = 1.5708
collision_layer = 0
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -70 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="poly" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -70 )
rotation = -1.5708
polygon = PoolVector2Array( -23, -18, -23, 8, -14, 18, 14, 18, 23, 9, 23, -18 )

[node name="HMG" type="Area2D" parent="."]
position = Vector2( 0, -70 )
collision_layer = 0
script = ExtResource( 16 )

[node name="sprite" type="Sprite" parent="HMG"]
position = Vector2( -0.000259399, 0 )
texture = ExtResource( 5 )
offset = Vector2( -0.749741, -11 )

[node name="shape" type="CollisionShape2D" parent="HMG"]
position = Vector2( -0.000259399, 0 )
rotation = 3.14159
shape = SubResource( 5 )

[node name="sight" type="RayCast2D" parent="HMG"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 100, 0 )

[node name="fire" type="Node2D" parent="HMG"]
visible = false

[node name="fire1" type="Sprite" parent="HMG/fire"]
position = Vector2( -8, 0 )
texture = ExtResource( 3 )

[node name="fire2" type="Sprite" parent="HMG/fire"]
position = Vector2( 4, 0 )
texture = ExtResource( 3 )

[node name="smoke" type="Particles2D" parent="HMG"]
rotation = -1.5708
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="shoot_timer" type="Timer" parent="HMG"]
wait_time = 0.3

[node name="cannon_anim" type="AnimationPlayer" parent="HMG"]
root_node = NodePath("../..")
anims/RESET = SubResource( 7 )
anims/shoot = SubResource( 8 )

[node name="HOME" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -72 )
script = ExtResource( 18 )

[node name="sprite" type="Sprite" parent="HOME"]
position = Vector2( -0.397705, -3.63861 )
texture = ExtResource( 17 )
offset = Vector2( 0.442108, -8.25473 )

[node name="fire_timer" type="Timer" parent="HOME"]
wait_time = 2.0

[node name="barrel" type="Position2D" parent="HOME"]
position = Vector2( 0, -45 )

[node name="fire" type="AudioStreamPlayer" parent="HOME"]
stream = ExtResource( 19 )
bus = "fx"

[node name="anim" type="AnimationPlayer" parent="HOME"]
anims/RESET = SubResource( 20 )
anims/fire = SubResource( 21 )

[node name="smoke" type="Particles2D" parent="HOME"]
position = Vector2( 0, -45 )
rotation = -1.5708
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 0.3
process_material = SubResource( 26 )
texture = ExtResource( 1 )

[node name="sensor" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="sensor"]
shape = SubResource( 27 )

[node name="weak_spot" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )

[node name="shape" type="CollisionShape2D" parent="weak_spot"]
position = Vector2( -0.000274658, -70 )
shape = SubResource( 15 )

[node name="explosion" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="explosion"]
visible = false
position = Vector2( 4.06554, -83.9654 )
scale = Vector2( 1.70044, 1.94507 )
texture = ExtResource( 10 )

[node name="anim" type="AnimationPlayer" parent="explosion"]
anims/RESET = SubResource( 17 )
anims/explode = SubResource( 18 )

[node name="shooted" type="Sprite" parent="."]
position = Vector2( -4.00026, -74 )
texture = ExtResource( 13 )

[node name="stream" type="Node" parent="."]

[node name="stream_shoot" type="AudioStreamPlayer" parent="stream"]
stream = ExtResource( 4 )
bus = "fx"

[node name="stream_hit" type="AudioStreamPlayer" parent="stream"]
stream = ExtResource( 4 )

[node name="stream_explosion" type="AudioStreamPlayer" parent="stream"]
stream = ExtResource( 14 )
bus = "fx"

[node name="hp_bar_node" type="Node2D" parent="."]

[node name="hp_bar" parent="hp_bar_node" instance=ExtResource( 15 )]
margin_left = -46.0
margin_top = -128.0
margin_right = -35.0
margin_bottom = -10.0
color = Color( 0.819608, 0, 0, 0.47451 )

[connection signal="timeout" from="HMG/shoot_timer" to="HMG" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="HOME/fire_timer" to="HOME" method="_on_fire_timer_timeout"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="damage" from="weak_spot" to="." method="_on_weak_spot_damage"]
